--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -95,6 +95,14 @@ jobs:
           ./hack/docker-login.sh
           ./hack/release.sh
 
+      - name: scan source
+        run: |-
+          grype .
+
+      - name: scan image
+        run: |-
+          grype $(cat ./release/cartographer.yaml | grep ' image: ' | awk '{print $NF}')
+
       - name: submit github release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
